# quadratic_solver

./: pyproject.toml
.github/workflows/: python.yml
src/quadratic_solver/: __main__.py  quadratic.py
tests/: test_quadratic.py
