[project]
name = "quadratic-solver"
version = "0.1.0"
description = ""
authors = [
    {name = "StefBianchet",email = "stefano.bianchet@heig-vd.ch"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
]

[tool.poetry]
packages = [{include = "quadratic_solver", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
quad = "quadratic_solver.__main__:main"
